--- a/miArmario/public/css/estilos.css
+++ b/miArmario/public/css/estilos.css
@@ -1,69 +1,20 @@
- .card {
-    border-radius: 20px;
-    border: 2px solid #ADD8E6;
-    box-shadow: 2px 2px 5px #888888;
-    background-color: #F1F1F1;
-    background-image: linear-gradient(to bottom, #f5f5f5 0%, #e0e0e0 100%);
-    margin-bottom: 20px;
-  } 
- .card-title{
-   /* color: #4d4d4d; */
-   color: #FFA726;
-   font-size: 1.5rem;
-   font-weight: 700;
- }
+body {
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
- .card-subtitle{
-    /* color: #4d4d4d; */
-    color: #ff3f26;
-    font-size: 1.5rem;
-    font-weight: 700;
-  }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
- .card-text{
-   color: #777;
-   font-size: 15px;
-   font-weight: 600;
-   font-family: 'Open Sans', sans-serif;
- }
-
-  
- /* .btn-primary{
-   background-color: #5cb85c;
-   color: #fff;
-   border-radius: 50px;
-   padding: 10px 20px;
-   text-decoration: none;
- }
- .btn-primary:hover{
-    background-color: #449d44;
-  } */
-  
- /* .card:hover {
-    background-color: #F5F5F5;
-    transform: scale(1.1);
-    transition: all 0.2s ease-in-out;
-  } */
- 
- 
-
-  /* ***************************** h1 ******************************************** */
-
-   h1 {
-    /* font-family: 'Great Vibes', cursive; */
-    font-size: 3rem;
-    color: #888;
-    text-align: center;
-    text-shadow: 2px 2px #ccc;
-  }
-
-  /* ***************************** row / col ******************************************** */
+.center-image {
+  width: 80%; /* cambia el valor para aumentar o disminuir el tamaño de la imagen */
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
 
 
-  /* .col-md-4 {
-    width: 25%;
-  } */
-
-  
-
-  
