--- a/miArmario/public/css/estilos.css
+++ b/miArmario/public/css/estilos.css
@@ -28,3 +28,16 @@ body {
   background-color: #000000;
   font-weight: bold;
 }
+
+.image-container {
+  height: 200px; /* Puedes ajustar esta altura según tus necesidades */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-container img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
